--- a/code/view/index.html
+++ b/code/view/index.html
@@ -28,6 +28,6 @@
 	<button type="submit">Отправить</button>
 </form>
 </body>
-<a href="getAdvertise.php">Список объявлений</a>
+<a href="view/getAdvertise.php">Список объявлений</a>
 
 </html>
