--- a/code/view/index.html
+++ b/code/view/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Газета "Ярмарка"</h1>
 <h2>Подать объявление</h2>
-<form method="post" action="addAdvertise.php">
+<form method="post" action="view/addAdvertise.php">
     <div>
         <label for="title">Заголовок </label>
         <input type="text" name="title" required id="title">
